<resources>
    <string name="app_name">Olsera</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">All Status</string>
    <string name="tab_text_2">Active</string>
    <string name="tab_text_3">Inactive</string>
    <string name="title_inactive">Inactive</string>
    <string name="title_name">Name</string>
    <string name="hint_name">Input name of office</string>
    <string name="title_location">Location Address</string>
    <string name="title_map">Map</string>
    <string name="title_add_office">Add Office</string>
    <string name="title_edit_office">Edit Office</string>
    <string name="title_address">Address</string>
    <string name="hint_address">Input your address</string>
    <string name="title_city">City</string>
    <string name="hint_city">Input your city</string>
    <string name="title_zip_code">Zip Code</string>
    <string name="hint_zip">Input your postal code</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_save">Save</string>
    <string name="title_cancel">Cancel</string>
    <string name="delete">Hapus</string>
    <string name="changed">Satu item berhasil diubah</string>
    <string name="deleted">Satu item berhasil dihapus</string>
    <string name="added">Satu item berhasil ditambahkan</string>
    <string name="yes">Yes</string>
    <string name="message_cancel">Apakah anda ingin membatalkan perubahan pada form?</string>
    <string name="message_delete">Apakah anda yakin ingin menghapus item ini?</string>
    <string name="no">No</string>
    <string name="text_empty">Tidak boleh kosong</string>
    <string name="empty_latitude">Latitude Kosong</string>
    <string name="longtitude_empty">Longtitude Kosong</string>
    <string name="online_booking_enabled">Online Booking enabled</string>
</resources>