<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.insert.AddUpdateOfficeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/card_btn"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/container_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="25dp"
            android:orientation="vertical">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <RadioButton android:id="@+id/radio_active"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_2"
                    android:layout_marginEnd="20dp"
                    android:onClick="onRadioButtonClicked"/>

                <RadioButton android:id="@+id/radio_inactive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_3"
                    android:onClick="onRadioButtonClicked"/>

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:lineSpacingMultiplier="1.36"
                android:text="@string/title_name" />

            <RelativeLayout
                android:id="@+id/rlNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etNama"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_edttext"
                    android:hint="@string/hint_name"
                    android:inputType="text"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textSize="14sp" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.36"
                android:layout_marginTop="12dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/title_location" />

            <!--            <RelativeLayout-->
            <!--                android:id="@+id/rlEmailHp"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content">-->

            <!--                <EditText-->
            <!--                    android:id="@+id/etEmail"-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="42dp"-->
            <!--                    android:layout_marginTop="10dp"-->
            <!--                    android:background="@drawable/custom_edttext"-->
            <!--                    android:fontFamily="@font/roboto_regular"-->
            <!--                    android:hint="@string/hint_email"-->
            <!--                    android:inputType="textEmailAddress"-->
            <!--                    android:paddingStart="16dp"-->
            <!--                    android:paddingEnd="16dp"-->
            <!--                    android:textSize="14sp" />-->

            <!--            </RelativeLayout>-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:lineSpacingMultiplier="1.36"
                android:text="@string/title_map" />

            <RelativeLayout
                android:id="@+id/rlPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <fragment
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp" />

                <ImageButton
                    android:id="@+id/btnMaps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:visibility="gone"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/ic_edit" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:lineSpacingMultiplier="1.36"
                android:text="@string/title_address" />

            <RelativeLayout
                android:id="@+id/rlHp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/etAlamat"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:background="@drawable/custom_edttext"
                    android:hint="@string/hint_address"
                    android:inputType="text"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textSize="14sp" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_city"
                android:layout_marginTop="12dp"/>

            <EditText
                android:id="@+id/etCity"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:background="@drawable/custom_edttext"
                android:hint="@string/hint_city"
                android:layout_marginTop="12dp"
                android:inputType="text"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_zip_code"
                android:layout_marginTop="12dp"/>

            <EditText
                android:id="@+id/etKode"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:background="@drawable/custom_edttext"
                android:hint="@string/hint_zip"
                android:layout_marginTop="12dp"
                android:paddingStart="16dp"
                android:inputType="textPostalAddress"
                android:paddingEnd="16dp"
                android:textSize="14sp" />

        </LinearLayout>

    </ScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/container_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="5dp"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:backgroundTint="@color/grey"
                android:text="@string/title_cancel"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnsave"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:layout_width="match_parent"
                android:textAllCaps="false"
                android:clickable="true"
                android:focusable="true"
                android:backgroundTint="@color/purple_500"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/title_save"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>